--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
 			</section>
 		<!-- Main Section -->
 	</div>
+	
+	<!--This is footer -->
 	<footer>
 		<nav>
 		<ul>
@@ -115,9 +117,10 @@
 		</nav>
 		<p>(c) 2015 The company</p>
 	</footer>
+	<!--This is end of the footer -->
 
 
-
+<!--This is Javascript files -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
